fix carousel display issues on mobile.

--- a/src/scss/modules/_carousel.scss
+++ b/src/scss/modules/_carousel.scss
@@ -8,6 +8,7 @@
   }
 
   img {
+    margin: 0 auto;
     max-width: 70rem;
   }
 
